--- a/index.html
+++ b/index.html
@@ -4,318 +4,266 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CELEX - Juegos</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet" />
   <style>
-    /* Reset y base */
-    * {
-      box-sizing: border-box;
-    }
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
+
     body {
       margin: 0;
-      font-family: 'Montserrat', sans-serif;
-      background: black;
-      overflow-x: hidden;
-      color: white;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: start;
-      background: #000;
-      position: relative;
-      overflow: hidden;
-    }
-
-    /* Animación copos de nieve */
-    @keyframes snowFall {
-      0% {
-        transform: translateY(-10vh) translateX(0);
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(110vh) translateX(30px);
-        opacity: 0;
-      }
-    }
-    .snowflake {
-      position: fixed;
-      top: -10vh;
-      background: white;
-      border-radius: 50%;
-      opacity: 0.8;
-      animation-name: snowFall;
-      animation-timing-function: linear;
-      animation-iteration-count: infinite;
-    }
-
-    /* Generar varios copos con diferentes posiciones y tamaños */
-    .snowflake:nth-child(1) {
-      left: 5%;
-      width: 8px;
-      height: 8px;
-      animation-duration: 10s;
-      animation-delay: 0s;
-    }
-    .snowflake:nth-child(2) {
-      left: 20%;
-      width: 5px;
-      height: 5px;
-      animation-duration: 12s;
-      animation-delay: 2s;
-    }
-    .snowflake:nth-child(3) {
-      left: 35%;
-      width: 6px;
-      height: 6px;
-      animation-duration: 8s;
-      animation-delay: 4s;
-    }
-    .snowflake:nth-child(4) {
-      left: 50%;
-      width: 7px;
-      height: 7px;
-      animation-duration: 11s;
-      animation-delay: 1s;
-    }
-    .snowflake:nth-child(5) {
-      left: 65%;
-      width: 5px;
-      height: 5px;
-      animation-duration: 9s;
-      animation-delay: 3s;
-    }
-    .snowflake:nth-child(6) {
-      left: 80%;
-      width: 9px;
-      height: 9px;
-      animation-duration: 13s;
-      animation-delay: 5s;
-    }
-    .snowflake:nth-child(7) {
-      left: 90%;
-      width: 6px;
-      height: 6px;
-      animation-duration: 10s;
-      animation-delay: 2.5s;
-    }
-
-    /* Contenedor general */
-    #mainContainer {
-      width: 100%;
-      max-width: 960px;
-      padding: 20px;
-      flex-grow: 1;
-    }
-
-    /* Título neon centrado */
-    h1#title {
-      font-weight: 600;
-      font-size: 3rem;
+      background: #121212;
+      font-family: Arial, sans-serif;
       color: #00fff7;
+      user-select: none;
+      overflow-x: hidden;
+    }
+
+    h1#title {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 3em;
       text-align: center;
-      margin-bottom: 20px;
+      margin: 20px 0;
+      color: #00fff7;
       text-shadow:
         0 0 5px #00fff7,
         0 0 10px #00fff7,
         0 0 20px #00fff7,
         0 0 40px #00fff7;
-      user-select: none;
     }
 
-    /* Contenedores login y registro (solo uno visible a la vez) */
+    #mainContainer {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 0 20px 40px;
+    }
+
     .form-container {
-      background: #111;
+      background: #222;
       padding: 20px;
-      border-radius: 8px;
-      max-width: 320px;
-      margin: 20px auto;
-      box-shadow: 0 0 10px #00fff7aa;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      display: none;
     }
     .form-container.active {
       display: block;
     }
-    .form-container:not(.active) {
-      display: none;
-    }
+
     label {
       display: block;
-      margin-bottom: 6px;
-      font-weight: 600;
+      margin: 10px 0 4px;
     }
-    input[type="text"],
-    input[type="password"] {
+
+    input[type="text"], input[type="password"] {
       width: 100%;
-      padding: 8px 10px;
-      margin-bottom: 14px;
-      border-radius: 4px;
+      padding: 8px;
+      border-radius: 5px;
       border: none;
-      font-size: 1rem;
-      font-family: 'Montserrat', sans-serif;
+      font-size: 1em;
     }
+
     button {
+      margin-top: 15px;
       width: 100%;
       padding: 10px;
       background: #00fff7;
+      color: #000;
       border: none;
-      color: black;
-      font-weight: 700;
-      font-size: 1.1rem;
-      border-radius: 4px;
+      border-radius: 8px;
+      font-weight: bold;
       cursor: pointer;
-      transition: background 0.3s ease;
+      transition: background 0.3s;
     }
     button:hover {
-      background: #00c7aa;
+      background: #00cccc;
     }
+
     .switch-link {
-      color: #00fff7;
+      margin-top: 10px;
       text-align: center;
-      margin-top: 12px;
+      color: #00fff7;
       cursor: pointer;
+      text-decoration: underline;
       user-select: none;
     }
-    .switch-link:hover {
-      text-decoration: underline;
+
+    #searchGamesContainer {
+      margin-bottom: 15px;
+      display: none; /* oculto por defecto */
+    }
+
+    #searchInput {
+      width: 100%;
+      padding: 8px;
+      border-radius: 5px;
+      border: none;
+      font-size: 1em;
+    }
+
+    #gameGrid {
+      display: none; /* oculto por defecto */
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      gap: 15px;
+      display: grid;
+    }
+
+    .game {
+      background: #333;
+      border-radius: 10px;
+      padding: 10px;
+      cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      transition: transform 0.2s;
+    }
+    .game:hover {
+      transform: scale(1.05);
+    }
+
+    .game img {
+      max-width: 100%;
+      border-radius: 10px;
+      margin-bottom: 8px;
+    }
+
+    .game-title {
+      color: #00fff7;
+      font-weight: bold;
+      text-align: center;
     }
 
     /* Panel usuario arriba derecha */
     #userPanel {
       position: fixed;
       top: 15px;
-      right: 20px;
-      background: #111;
-      border-radius: 8px;
-      padding: 10px 15px;
-      display: none;
-      box-shadow: 0 0 10px #00fff7aa;
+      right: 15px;
+      background: #222;
+      border-radius: 50px;
+      padding: 8px 12px;
+      color: #00fff7;
       cursor: pointer;
+      display: none; /* oculto si no está logueado */
       user-select: none;
-      display: flex;
       align-items: center;
       gap: 8px;
-      color: #00fff7;
-      font-weight: 600;
-      font-size: 1.1rem;
+      display: flex;
+      font-weight: bold;
+      box-shadow:
+        0 0 5px #00fff7,
+        0 0 10px #00fff7;
       z-index: 1001;
     }
-    #userPanel:hover {
-      background: #222;
-    }
+
     #userIcon {
-      font-size: 1.3rem;
-      user-select: none;
+      font-size: 1.4em;
     }
 
-    /* Ventana info usuario */
+    /* Info usuario desplegable */
     #userInfo {
       position: fixed;
       top: 55px;
-      right: 20px;
-      background: #111;
-      border-radius: 8px;
+      right: 15px;
+      background: #222;
+      border-radius: 10px;
       padding: 15px;
-      box-shadow: 0 0 12px #00fff7aa;
-      width: 220px;
+      color: #00fff7;
+      width: 250px;
+      box-shadow:
+        0 0 10px #00fff7;
       display: none;
-      color: #00fff7;
-      font-weight: 500;
-      font-size: 0.9rem;
-      z-index: 1000;
+      z-index: 1001;
+      user-select: none;
     }
-    #userInfo b {
-      color: #00fff7;
+
+    #userInfo div {
+      margin-bottom: 8px;
+      font-size: 0.95em;
     }
+
     #logoutBtn {
-      margin-top: 10px;
       width: 100%;
-      padding: 6px;
-      background: #ff3333;
+      padding: 8px;
       border: none;
-      border-radius: 4px;
-      font-weight: 700;
-      cursor: pointer;
+      border-radius: 8px;
+      background: #ff4444;
       color: white;
-      font-size: 0.9rem;
-      transition: background 0.3s ease;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s;
     }
     #logoutBtn:hover {
       background: #cc0000;
     }
 
-    /* Buscador juegos y grid */
-    #searchGamesContainer {
-      display: none;
-      margin: 20px 0 10px 0;
-      text-align: center;
-    }
-    #searchInput {
-      width: 100%;
-      max-width: 500px;
-      padding: 10px 14px;
-      font-size: 1rem;
-      border-radius: 6px;
-      border: none;
-      font-family: 'Montserrat', sans-serif;
-      box-shadow: 0 0 8px #00fff7aa;
-      background: #111;
-      color: white;
-      outline: none;
-      transition: box-shadow 0.3s ease;
-    }
-    #searchInput:focus {
-      box-shadow: 0 0 12px #00fff7ff;
+    /* Copos de nieve simples animados */
+    .snowflake {
+      position: fixed;
+      top: -10px;
+      color: #00fff7;
+      font-size: 1em;
+      user-select: none;
+      pointer-events: none;
+      animation-name: fall;
+      animation-timing-function: linear;
+      animation-iteration-count: infinite;
     }
 
-    #gameGrid {
-      display: none;
-      max-width: 960px;
-      margin: 0 auto 40px auto;
-      padding: 0 10px;
-      display: grid;
-      grid-template-columns: repeat(auto-fill,minmax(140px,1fr));
-      gap: 18px;
+    .snowflake:nth-child(1) {
+      left: 10%;
+      animation-duration: 10s;
+      animation-delay: 0s;
     }
-    .game {
-      background: #111;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 0 8px #00fff7aa;
-      transition: transform 0.3s ease;
-      cursor: pointer;
-      display: flex;
-      flex-direction: column;
-      text-align: center;
+    .snowflake:nth-child(2) {
+      left: 30%;
+      animation-duration: 12s;
+      animation-delay: 2s;
     }
-    .game:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 14px #00fff7ff;
+    .snowflake:nth-child(3) {
+      left: 50%;
+      animation-duration: 14s;
+      animation-delay: 4s;
     }
-    .game img {
-      width: 100%;
-      height: 110px;
-      object-fit: contain;
-      background: black;
-      border-bottom: 2px solid #00fff7;
+    .snowflake:nth-child(4) {
+      left: 70%;
+      animation-duration: 16s;
+      animation-delay: 1s;
     }
-    .game-title {
-      padding: 8px 6px;
-      font-weight: 600;
-      font-size: 1rem;
-      color: #00fff7;
-      user-select: none;
+    .snowflake:nth-child(5) {
+      left: 90%;
+      animation-duration: 11s;
+      animation-delay: 3s;
+    }
+    .snowflake:nth-child(6) {
+      left: 20%;
+      animation-duration: 13s;
+      animation-delay: 5s;
+    }
+    .snowflake:nth-child(7) {
+      left: 80%;
+      animation-duration: 15s;
+      animation-delay: 7s;
+    }
+
+    @keyframes fall {
+      0% {
+        top: -10px;
+        opacity: 1;
+      }
+      100% {
+        top: 100vh;
+        opacity: 0;
+      }
     }
   </style>
 </head>
 <body>
 
   <!-- Copos de nieve -->
-  <div class="snowflake"></div>
-  <div class="snowflake"></div>
-  <div class="snowflake"></div>
-  <div class="snowflake"></div>
-  <div class="snowflake"></div>
-  <div class="snowflake"></div>
-  <div class="snowflake"></div>
+  <div class="snowflake">❄</div>
+  <div class="snowflake">❄</div>
+  <div class="snowflake">❄</div>
+  <div class="snowflake">❄</div>
+  <div class="snowflake">❄</div>
+  <div class="snowflake">❄</div>
+  <div class="snowflake">❄</div>
 
   <h1 id="title">CELEX - Juegos</h1>
 
@@ -391,10 +339,10 @@
       clearMessages();
     }
     function clearMessages() {
-      // Aquí para mensajes futuros de error o confirmación
+      // Aquí puedes agregar mensajes de error en el futuro si quieres
     }
 
-    // Usuarios en localStorage
+    // Obtener usuarios de localStorage
     function getUsers() {
       const users = localStorage.getItem('users');
       if (!users) return [];
@@ -404,6 +352,7 @@
         return [];
       }
     }
+    // Guardar usuarios en localStorage
     function saveUsers(users) {
       localStorage.setItem('users', JSON.stringify(users));
     }
@@ -424,6 +373,8 @@
       }
 
       let users = getUsers();
+
+      // Comprobar si usuario ya existe (case insensitive)
       if (users.some(u => u.username.toLowerCase() === username.toLowerCase())) {
         alert('El nombre de usuario ya está en uso');
         return;
@@ -542,17 +493,24 @@
       if (user) {
         showLoggedInUI(user);
       } else {
+        // Si no está logueado, ocultar juegos y buscador
+        document.getElementById('searchGamesContainer').style.display = 'none';
+        document.getElementById('gameGrid').style.display = 'none';
+        document.getElementById('userPanel').style.display = 'none';
+        document.getElementById('userInfo').style.display = 'none';
         showLogin();
       }
     };
 
-    // Cerrar ventana info al hacer clic fuera
-    window.onclick = () => {
+    // Cerrar info usuario si clic fuera
+    document.body.addEventListener('click', () => {
       const info = document.getElementById('userInfo');
       if (info.style.display === 'block') {
         info.style.display = 'none';
       }
-    };
+    });
+
   </script>
+
 </body>
 </html>
