--- a/index.html
+++ b/index.html
@@ -294,23 +294,24 @@
       }
     }
 
-    // Juegos de ejemplo
+    // Juegos de ejemplo (puedes modificar o añadir más)
     const games = [
-      {name: "Burrito Bison", url: "#"},
-      {name: "Super Mario", url: "#"},
-      {name: "Pac-Man", url: "#"},
-      {name: "Tetris", url: "#"},
-      {name: "Space Invaders", url: "#"},
+      { name: "Burrito Bison", url: "#" },
+      { name: "Tetris", url: "#" },
+      { name: "Snake", url: "#" },
+      { name: "Pong", url: "#" },
+      { name: "Pac-Man", url: "#" },
+      { name: "Space Invaders", url: "#" },
+      { name: "Mario Bros", url: "#" }
     ];
 
+    // Cargar juegos en grid, con filtro
     function loadGames(filter = '') {
       gameGrid.innerHTML = '';
-      const filteredGames = games.filter(g => g.name.toLowerCase().includes(filter.toLowerCase()));
-      if(filteredGames.length === 0){
-        gameGrid.innerHTML = '<p style="color:#0ff; font-weight:600; text-align:center;">No se encontraron juegos.</p>';
-        return;
-      }
-      filteredGames.forEach(game => {
+      const filtered = games.filter(game =>
+        game.name.toLowerCase().includes(filter.toLowerCase())
+      );
+      filtered.forEach(game => {
         const div = document.createElement('div');
         div.className = 'gameCard';
         div.textContent = game.name;
@@ -320,7 +321,7 @@
       });
     }
 
-    // Eventos formulario registro
+    // Registro de usuario
     registerForm.addEventListener('submit', e => {
       e.preventDefault();
 
@@ -357,11 +358,10 @@
 
       showMessage('Registro exitoso. Ya puedes iniciar sesión.', false);
 
-      // Limpiar formulario registro
       registerForm.reset();
     });
 
-    // Eventos formulario login
+    // Login usuario
     loginForm.addEventListener('submit', e => {
       e.preventDefault();
 
@@ -385,7 +385,7 @@
       showUserPanel(username);
     });
 
-    // Mostrar panel info usuario al hacer clic en userPanel
+    // Mostrar u ocultar info usuario
     userPanel.addEventListener('click', () => {
       if (userInfo.style.display === 'none') {
         userInfo.style.display = 'block';
@@ -405,7 +405,7 @@
       loadGames(e.target.value);
     });
 
-    // Al cargar la página, revisar si hay usuario logueado
+    // Al cargar la página, comprobar si hay sesión iniciada
     window.addEventListener('load', () => {
       const logged = getLoggedUser();
       if (logged) {
@@ -414,7 +414,6 @@
         showLogin();
       }
     });
-
   </script>
 
 </body>
